spacing fix

--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ body {
   margin-left: 30px;
   margin-right: 30px;
   margin-top: 40px;
-  height: 82%;
+  height: 85%;
 }
 
 h1.vis-title {
@@ -195,6 +195,7 @@ h1.vis-title {
   margin-top: 15%;
 }
 .landing-info {
+  height: 15%;
   padding-top: 20px;
   padding-left: 20px;
   padding-right: 20px;
